Remove not needed codes #10525
